# fastapi-mkdocs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  example_docs_at_root.py  mkdocs.yml  pyproject.toml  requirements.txt
custom_theme/: base.html
docs/: index.md
examples/: example.py
fastapi_mkdocs/: __init__.py  core.py
fastapi_mkdocs/routers/: __init__.py  docs.py
site/: 404.html  index.html  objects.inv
