[project]
name = "fastapi-mkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.0",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "pre-commit>=4.1.0",
]
[tool.ruff]
target-version = "py311"
[tool.ruff.lint]
select = [
 "E",   # pycodestyle
 "F",   # pyflakes
 "UP",  # pyupgrade
 "D",   # pydocstyle
 "PL", # pylint
 "SIM", # flake8 simplify
 "RUF", # ruff specific
 "I",    # isort
 "N", # pep8 naming conventions
 "ANN", # flake8-annotations
 "B", # bugbear
"C", # complexity
"A", # flake8-builtins
"C4", # flake8-comprehensions
"LOG", # flake8-logging
"PTH", # flake8-pathlib
]
[tool.ruff.lint.pydocstyle]
convention = "google"
